Virtual threads en toda la aplicacion
Activa spring.threads.virtual.enabled, con lo que Tomcat sirve cada request
en un virtual thread y @Async/@Scheduled pasan a los SimpleAsyncTask
{Executor,Scheduler} virtuales.

Todo el I/O saliente ya era compatible: no hay ningun RestTemplate, las dos
llamadas HTTP (Nominatim y el intercambio de codigo de Google) usan
java.net.http.HttpClient, y el driver pgjdbc bloquea sobre sockets normales.
Sus bloques synchronized dejaron de fijar el carrier thread en Java 25
(JEP 491), que es la version del toolchain y de la imagen de Docker.

AsyncPushNotifier gestionaba sus propios threads, asi que su pool fijo de 2
threads de plataforma pasa tambien a un virtual thread por entrega. Se
conserva el nombre push-notifier-N mediante una factory explicita, util en
logs y en las trazas de New Relic. Como contrapartida, las entregas de push
ya no estan limitadas a dos en paralelo: si una rafaga de notificaciones
llegase a saturar el pool de Hikari, el sitio donde acotarlas es dispatch().

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>